// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu > matches the snapshot 1`] = `
"<div class="dropdown"><button class="iconButton alignRight button button" type="button" title="More">
    <phdotsthreevertical class="icon" aria-hidden="true" size="20" weight="duotone"></phdotsthreevertical><span class="text visually-hidden">More</span>
  </button>
  <!--v-if-->
</div>"
`;

exports[`DropdownMenu > when the IconButton component is clicked > matches the snapshot 1`] = `
"<div class="dropdown"><button class="iconButton alignRight button button" type="button" title="More">
    <phdotsthreevertical class="icon" aria-hidden="true" size="20" weight="duotone"></phdotsthreevertical><span class="text visually-hidden">More</span>
  </button>
  <div class="dropdownMenu">
    <ul class="menu">Slot content</ul>
  </div>
</div>"
`;

exports[`DropdownMenu > when the IconButton component is clicked > when a non esc key is pressed > matches the snapshot 1`] = `
"<div class="dropdown"><button class="iconButton alignRight button button" type="button" title="More">
    <phdotsthreevertical class="icon" aria-hidden="true" size="20" weight="duotone"></phdotsthreevertical><span class="text visually-hidden">More</span>
  </button>
  <div class="dropdownMenu">
    <ul class="menu">Slot content</ul>
  </div>
</div>"
`;

exports[`DropdownMenu > when the IconButton component is clicked > when document is clicked > matches the snapshot 1`] = `
"<div class="dropdown"><button class="iconButton alignRight button button" type="button" title="More">
    <phdotsthreevertical class="icon" aria-hidden="true" size="20" weight="duotone"></phdotsthreevertical><span class="text visually-hidden">More</span>
  </button>
  <!--v-if-->
</div>"
`;

exports[`DropdownMenu > when the IconButton component is clicked > when dropdownMenu is clicked > matches the snapshot 1`] = `
"<div class="dropdown"><button class="iconButton alignRight button button" type="button" title="More">
    <phdotsthreevertical class="icon" aria-hidden="true" size="20" weight="duotone"></phdotsthreevertical><span class="text visually-hidden">More</span>
  </button>
  <div class="dropdownMenu">
    <ul class="menu">Slot content</ul>
  </div>
</div>"
`;

exports[`DropdownMenu > when the IconButton component is clicked > when esc key is pressed > matches the snapshot 1`] = `
"<div class="dropdown"><button class="iconButton alignRight button button" type="button" title="More">
    <phdotsthreevertical class="icon" aria-hidden="true" size="20" weight="duotone"></phdotsthreevertical><span class="text visually-hidden">More</span>
  </button>
  <!--v-if-->
</div>"
`;

exports[`DropdownMenu > when the IconButton component is clicked > when the IconButton component is clicked again > matches the snapshot 1`] = `
"<div class="dropdown"><button class="iconButton alignRight button button" type="button" title="More">
    <phdotsthreevertical class="icon" aria-hidden="true" size="20" weight="duotone"></phdotsthreevertical><span class="text visually-hidden">More</span>
  </button>
  <!--v-if-->
</div>"
`;
